fixed bug: UI issue in footer when side menu on Payment success page(citizen) is collapsed

--- a/web/rainmaker/dev-packages/egov-tradelicence-dev/src/ui-config/screens/specs/tradelicence/acknowledgementResource/index.css
+++ b/web/rainmaker/dev-packages/egov-tradelicence-dev/src/ui-config/screens/specs/tradelicence/acknowledgementResource/index.css
@@ -17,3 +17,7 @@
   
    
   }
+
+  #custom-atoms-paymentSuccessFooter #custom-atoms-container {
+    display: inline-block;
+  }
